feat: avoids publishing if no changelog

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -41,6 +41,7 @@ jobs:
           tag-prefix: ''
 
       - name: NPM Publish
+        if: ${{ steps.changelog.outputs.skipped == 'false' }}
         uses: JS-DevTools/npm-publish@v1
         with:
           token: ${{ secrets.npm_token }}
