--- a/_github/workflows/release.yml
+++ b/_github/workflows/release.yml
@@ -51,3 +51,10 @@ jobs:
           tag_name: ${{ steps.changelog.outputs.tag }}
           release_name: ${{ steps.changelog.outputs.tag }}
           body: ${{ steps.changelog.outputs.changelog }}
+
+      - name: NPM Publish
+        uses: JS-DevTools/npm-publish@v1
+        if: ${{ steps.changelog.outputs.skipped == 'false' }}
+        with:
+          token: ${{ secrets.npm_token }}
+          access: 'public'
