--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "build": "tsc",
     "test": "tap --ts",
     "coverage": "tap --coverage-report=html",
-    "prepare": "is-ci || husky install"
+    "prepare": "node prepare.js || echo 'Skipping prepare'"
   },
   "keywords": [
     "markdown",
@@ -41,8 +41,14 @@
     "@commitlint/cli": "^16.0.2",
     "@commitlint/config-conventional": "^16.0.0",
     "@istanbuljs/esm-loader-hook": "^0.1.2",
+    "@saithodev/semantic-release-backmerge": "^2.0.0",
+    "@semantic-release/changelog": "^6.0.1",
+    "@semantic-release/commit-analyzer": "^9.0.1",
+    "@semantic-release/git": "^10.0.1",
+    "@semantic-release/github": "^8.0.2",
+    "@semantic-release/npm": "^9.0.0",
+    "@semantic-release/release-notes-generator": "^10.0.2",
     "@types/tap": "^15.0.5",
-    "cz-conventional-changelog": "^3.1.0",
     "eslint": "^8.6.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-node": "^11.1.0",
@@ -53,7 +59,6 @@
     "markdown-toc": "^1.2.0",
     "nyc": "^15.1.0",
     "prettier": "^2.3.2",
-    "standard-version": "^9.3.2",
     "tap": "^15.0.10",
     "ts-node": "^10.2.1",
     "typescript": "^4.4.3"
