--- a/.releaserc.json
+++ b/.releaserc.json
@@ -1,26 +1,26 @@
 {
-    "branches": [
-        { "name": "main" },
-        { "name": "next", "channel": "next", "prerelease": true }
+  "branches": [
+    { "name": "main" },
+    { "name": "next", "channel": "next", "prerelease": true }
+  ],
+  "plugins": [
+    "@semantic-release/commit-analyzer",
+    "@semantic-release/release-notes-generator",
+    "@semantic-release/changelog",
+    "@semantic-release/npm",
+    [
+      "@semantic-release/git",
+      {
+        "assets": ["CHANGELOG.md", "package.json", "package-lock.json"]
+      }
     ],
-    "plugins": [
-        "@semantic-release/commit-analyzer",
-        "@semantic-release/release-notes-generator",
-        "@semantic-release/changelog",
-        "@semantic-release/npm",
-        [
-            "@semantic-release/git",
-            {
-                "assets": ["CHANGELOG.md", "package.json", "package-lock.json"]
-            }
-        ],
-        "@semantic-release/github",
-        [
-            "@saithodev/semantic-release-backmerge",
-            {
-                "branches": ["next"],
-                "backmergeStrategy": "rebase"
-            }
-        ]
+    "@semantic-release/github",
+    [
+      "@saithodev/semantic-release-backmerge",
+      {
+        "branches": ["next"],
+        "clearWorkspace": true
+      }
     ]
+  ]
 }
