--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -4,22 +4,8 @@ on: [workflow_dispatch]
 
 jobs:
     test:
-        strategy:
-            matrix:
-                os: [ubuntu-latest]
-                node-version: [16.x]
-
-        runs-on: ${{ matrix.os }}
-        steps:
-            - uses: actions/checkout@v3
-              with:
-                  token: ${{ secrets.GITHUB_TOKEN }}
-            - uses: actions/setup-node@v3
-              with:
-                  node-version: ${{ matrix.node-version }}
-
-            - name: Install dependencies
-              run: npm it
+        name: Run tests
+        uses: ./.github/workflows/test.yml
 
     release:
         needs: [test]
