--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,13 @@
 {
   "compilerOptions": {
-    "target": "ES6",
+    "target": "ES2022",
+    "module": "Node16",
+    "moduleResolution": "Node16",
     "esModuleInterop": true,
-    "module": "commonjs",
     "outDir": "dist",
     "declaration": true,
     "declarationDir": "types/"
   },
   "exclude": ["test/**"],
-  "include": ["src"]
+  "include": ["src", "bin"]
 }
