--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "scripts": {
     "build": "tsc",
     "test": "tap",
-    "prepare": "$CI || husky",
+    "prepare": "node prepare.mjs || echo 'Skipping prepare'",
     "postinstall": "node replacer.js"
   },
   "keywords": [
@@ -35,11 +35,7 @@
     "@commitlint/config-conventional": "^19.2.2",
     "@saithodev/semantic-release-backmerge": "^4.0.1",
     "@semantic-release/changelog": "^6.0.3",
-    "@semantic-release/commit-analyzer": "^12.0.0",
     "@semantic-release/git": "^10.0.1",
-    "@semantic-release/github": "^10.0.4",
-    "@semantic-release/npm": "^12.0.1",
-    "@semantic-release/release-notes-generator": "^13.0.0",
     "@types/tap": "^15.0.11",
     "@typescript-eslint/eslint-plugin": "^7.10.0",
     "@typescript-eslint/parser": "^7.10.0",
