--- a/package.json
+++ b/package.json
@@ -31,27 +31,21 @@
   "author": "Simone Corsi <simonecorsi.dev@gmail.com>",
   "license": "MIT",
   "devDependencies": {
-    "@commitlint/cli": "^19.6.0",
-    "@commitlint/config-conventional": "^19.6.0",
+    "@biomejs/biome": "^1.9.4",
+    "@commitlint/cli": "^19.8.0",
+    "@commitlint/config-conventional": "^19.8.0",
     "@saithodev/semantic-release-backmerge": "^4.0.1",
     "@semantic-release/changelog": "^6.0.3",
     "@semantic-release/git": "^10.0.1",
     "@types/tap": "^15.0.11",
-    "@typescript-eslint/eslint-plugin": "^7.18.0",
-    "@typescript-eslint/parser": "^7.18.0",
-    "eslint": "^8.57.1",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-prettier": "^5.2.1",
-    "husky": "^9.1.7",
-    "is-ci": "^3.0.0",
-    "lint-staged": "^15.2.10",
+    "@typescript-eslint/eslint-plugin": "^7.10.0",
+    "@typescript-eslint/parser": "^7.10.0",
+    "lefthook": "^1.11.3",
     "markdown-toc": "^1.2.0",
-    "prettier": "^3.4.0",
-    "tap": "^19.2.5",
-    "tinybench": "^2.9.0",
-    "tsx": "^4.19.2",
-    "typescript": "^5.7.2"
+    "tap": "^19.0.0",
+    "tinybench": "^2.8.0",
+    "tsx": "^4.10.5",
+    "typescript": "^5.4.5"
   },
   "dependencies": {
     "replace-in-file": "^7.2.0"
